# pynamodb-templates

./: .gitignore  pyproject.toml  pytest.ini
pynamodb_templates/attributes/: __init__.py  _bool.py  _enum.py  _ulid.py  lyft.py  serializer.py  utils.py
pynamodb_templates/models/: __init__.py  time_tracked.py
tests/: setup_dynamodb_local.py  test.json  test_attributes.py  test_model.py  test_pynamodb_dynamicmapattr.py
